# rust_bmp

./: Cargo.toml  README.md  build_log.txt  build_log_errors.txt
src/: main.rs
ui/: main.slint
